[package]
name = "cairo-lang-runner"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Basic cairo runner."

[dependencies]
ark-ff.workspace = true
ark-std.workspace = true
cairo-felt.workspace = true
cairo-lang-casm = { path = "../cairo-lang-casm", version = "1.1.0" }
cairo-lang-compiler = { path = "../cairo-lang-compiler", version = "1.1.0" }
cairo-lang-defs = { path = "../cairo-lang-defs", version = "1.1.0" }
cairo-lang-diagnostics = { path = "../cairo-lang-diagnostics", version = "1.1.0" }
cairo-lang-filesystem = { path = "../cairo-lang-filesystem", version = "1.1.0" }
cairo-lang-lowering = { path = "../cairo-lang-lowering", version = "1.1.0" }
cairo-lang-semantic = { path = "../cairo-lang-semantic", version = "1.1.0" }
cairo-lang-sierra = { path = "../cairo-lang-sierra", version = "1.1.0" }
cairo-lang-sierra-ap-change = { path = "../cairo-lang-sierra-ap-change", version = "1.1.0" }
cairo-lang-sierra-gas = { path = "../cairo-lang-sierra-gas", version = "1.1.0" }
cairo-lang-sierra-generator = { path = "../cairo-lang-sierra-generator", version = "1.1.0" }
cairo-lang-sierra-to-casm = { path = "../cairo-lang-sierra-to-casm", version = "1.1.0" }
cairo-lang-starknet = { path = "../cairo-lang-starknet", version = "1.1.0" }
cairo-lang-utils = { path = "../cairo-lang-utils", version = "1.1.0" }
cairo-vm = { version = "0.3.0-rc1", features = ["alloc"], default-features = false }
# cairo-vm = { version = "0.3.0-rc1", default-features = true }
clap.workspace = true
itertools.workspace = true
keccak.workspace = true
num-bigint.workspace = true
num-integer.workspace = true
num-traits.workspace = true
salsa.workspace = true
thiserror.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
test-case.workspace = true

[dependencies.serde]
version = "1.0"
features = ["derive"]
default-features = false

[dependencies.serde_bytes]
version = "0.11.9"
default-features = false

[dependencies.serde_json]
version = "1.0"
features = ["arbitrary_precision"]
default-features = false

[dependencies.starknet-crypto]
version = "0.4.2"
features = ["signature-display"]
default-features = false

[dependencies.thiserror-no-std]
version = "2.0.2"

[dependencies.parse-hyperlinks]
version = "0.24.2-rc1"
default-features = false
package = "cairo-take_until_unbalanced"

[dependencies.bincode]
version = "2.0.0-rc.2"
features = ["serde"]
default-features = false

[dependencies.anyhow]
version = "1.0.69"
default-features = false

[features]
alloc = [
    "serde_json/alloc",
    "serde_bytes/alloc",
    "starknet-crypto/alloc",
    "parse-hyperlinks/alloc",
]
default = [
    "std",
]
hooks = []
skip_next_instruction_hint = []
std = [
    "serde_json/std",
    "serde_bytes/std",
    "bincode/std",
    "anyhow/std",
    "starknet-crypto/std",
    "parse-hyperlinks/std",
]

[[bin]]
name = "cairo-run"
path = "src/cli.rs"
